--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,5 @@ script:
 - travis_retry docker build -t "$image" .
 after_script:
 - docker images
-deploy:
-- docker login -u "$DOCKERHUB_USER" -p "$DOCKERHUB_PASSWORD"
-- docker push "$image"
+after_success:
+- docker login -u "$DOCKERHUB_USER" -p "$DOCKERHUB_PASSWORD"; docker push "$image"
